# pointcloud-autoprocess-with-ROS

./: .gitignore  README.md
pcl_pub/: CMakeLists.txt  README.md  package.xml
pcl_pub/cfg/: gocator_publisher_params.cfg
pcl_pub/include/: gocator_publisher.h
pcl_pub/launch/: gocator_publisher.launch
pcl_pub/param/rviz/: default.rviz
pcl_pub/results/: test.txt
pcl_pub/scripts/: server.py  test_server.py
pcl_pub/src/: gocator_publisher.cpp
pcl_sub/: CMakeLists.txt  README.md  package.xml
pcl_sub/include/: gocator_subscriber.h  measure_node.h  workpiece_measure.h
pcl_sub/launch/: gocator_publisher.launch  gocator_subscriber.launch  measure_from_device.launch  measure_from_sim.launch  measure_target_ball.launch  measure_workpiece.launch
pcl_sub/param/rviz/: default.rviz
pcl_sub/src/: gocator_subscriber.cpp  gocator_subsriber.cpp  measure_node.cpp  measure_node_main.cpp  workpiece_measure.cpp
target_generator/: CMakeLists.txt  README.md  package.xml
target_generator/launch/: target_generator.launch
target_generator/src/: target_generator.cpp
